--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "DOU Black List",
-    "version": "1.0",
+    "version": "1.0.1",
     "description": "Manage the Black List at http://dou.ua/forums",
     "permissions": ["tabs", "http://*/*"],
     "content_scripts" : [{
-        "matches" : [ "http://dou.ua/*"],
+        "matches" : [ "*://dou.ua/forums/topic/*"],
         "js" : ["extension.js"],
         "css" : ["styles.css"]
     }],
