--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "DOU Black List",
     "version": "2.0.0",
     "description": "Manage the Black List at http://dou.ua/forums",
-    "permissions": ["activeTab"],
+    "permissions": ["tabs", "https://*/*"],
     "content_scripts" : [{
         "matches" : [ "*://dou.ua/forums/topic/*", "*://dou.ua/lenta/**/*"],
         "js" : ["extension.js"],
