--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
-    "name": "DOU Black List",
-    "version": "2.0.0",
-    "description": "Manage the Black List at http://dou.ua/forums",
-    "permissions": ["tabs", "https://*/*"],
-    "content_scripts" : [{
-        "matches" : [ "*://dou.ua/forums/topic/*", "*://dou.ua/lenta/**/*"],
-        "js" : ["extension.js"],
-        "css" : ["styles.css"]
-    }],
-    "manifest_version": 2
+  "name": "DOU Block List",
+  "version": "2.0.1",
+  "description": "Manage the Block List at https://dou.ua/forums",
+  "permissions": ["https://dou.ua/forums/topic/*", "https://dou.ua/lenta/**/*"],
+  "content_scripts": [
+    {
+      "matches": ["https://dou.ua/forums/topic/*", "https://dou.ua/lenta/**/*"],
+      "js": ["extension.js"],
+      "css": ["styles.css"]
+    }
+  ],
+  "host_permissions": [],
+  "manifest_version": 2
 }
