--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev": "tsc -w",
+    "prezip": "tsc",
     "zip": "zip extension.zip manifest.json extension.js styles.css"
   }
 }
