--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
     "target": "ES2020",
     "removeComments": true
   },
-  "files": ["extension.ts"]
+  "files": ["extension.ts", "settings.ts"]
 }
